[package]
name = "rustpad-server"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
dashmap = { version = "6.1", features = ["serde"] }
futures = "0.3"
log = "0.4"
operational-transform = { version = "0.6", features = ["serde"] }
pretty_env_logger = "0.5"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "io-util", "test-util"] }
warp = { version = "0.4", features = ["server", "test", "websocket"] }
openidconnect = { version = "4.0", features = [
    "timing-resistant-secret-traits",
] }
warp-sessions = "1.0"
base64 = "0.22"
