[package]
name = "rustpad-server"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
dashmap = { version = "6.1", features = ["serde"] }
futures = "0.3"
operational-transform = { version = "0.6", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "io-util", "test-util"] }
openidconnect = { version = "4.0", features = [
    "timing-resistant-secret-traits",
] }
base64 = "0.22"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tokio-tungstenite = "0.28"
tokio-util = { version = "0.7", features = ["codec"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
http-body-util = "0.1.0"
clap = { version = "4.5", features = ["derive"] }
yrs = { version = "0.25", features = ["sync"] }
bytes = "1.11"
